--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.25",
     "@reduxjs/toolkit": "^2.8.2",
+    "dotenv": "^17.2.2",
     "expo": "~53.0.20",
     "expo-font": "~13.3.2",
     "expo-splash-screen": "~0.30.10",
