--- a/src/.env
+++ b/src/.env
@@ -1,1 +1,1 @@
-EXPO_PUBLIC_RTDB_URL= https://fashion-ecommerce-faf28-default-rtdb.firebaseio.com/
+EXPO_PUBLIC_BASE_RTDB_URL=https://fashion-ecommerce-faf28-default-rtdb.firebaseio.com
