--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^2.8.2",
     "dotenv": "^17.2.2",
     "expo": "~53.0.20",
+    "expo-env": "^1.1.1",
     "expo-font": "~13.3.2",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
