--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 EXPO_PUBLIC_BASE_RTDB_URL=https://fashion-ecommerce-faf28-default-rtdb.firebaseio.com
+EXPO_PUBLIC_AUTH_URL=https://identitytoolkit.googleapis.com/v1/
+EXPO_PUBLIC_API_KEY=AIzaSyAxFRSbfWA9v6xWY_DUWTxJ0lAs7TiTDwU
